tests/NormalTests/paczka1/small_fuzzy/86546259.err
Error in line 2: 1iSMpGl6Lu7 S906 0,2
Error in line 10: dUvAQf2VJ2s S906 50,1
